[gd_scene load_steps=7 format=3 uid="uid://bla6uvybvj3to"]

[ext_resource type="Script" path="res://GameElements/InGameUILayer/in_game_ui_layer.gd" id="1_6w3qp"]
[ext_resource type="PackedScene" uid="uid://yfevd8114od4" path="res://GameElements/CardManager/CardManager.tscn" id="1_koc6h"]
[ext_resource type="FontFile" uid="uid://flm0f1gbd7v1" path="res://Assets/Fonts/Bendicion/OTF/Bendicion-Regular_Modular.otf" id="2_xe7uj"]
[ext_resource type="Texture2D" uid="uid://by7i4jq3e4po5" path="res://Assets/UI/buttonRetry_neutral.png" id="3_khjl0"]
[ext_resource type="Texture2D" uid="uid://cwef4pj71l284" path="res://Assets/UI/buttonRetry_active.png" id="4_ut4tw"]
[ext_resource type="Texture2D" uid="uid://vnh08sxtf34t" path="res://Assets/UI/buttonRetry_hover.png" id="5_65syq"]

[node name="InGameUiLayer" type="CanvasLayer" node_paths=PackedStringArray("cardManager")]
script = ExtResource("1_6w3qp")
cardManager = NodePath("Control/BottomRightSlot/CardManager")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UpperMiddleSlot" type="MarginContainer" parent="Control"]
layout_mode = 1
offset_right = 287.0
offset_bottom = 226.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50

[node name="VBoxContainer" type="VBoxContainer" parent="Control/UpperMiddleSlot"]
layout_mode = 2

[node name="Timer" type="MarginContainer" parent="Control/UpperMiddleSlot/VBoxContainer"]
layout_mode = 2

[node name="BoxMargin" type="MarginContainer" parent="Control/UpperMiddleSlot/VBoxContainer/Timer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="BackgroundBox" type="ColorRect" parent="Control/UpperMiddleSlot/VBoxContainer/Timer/BoxMargin"]
visible = false
layout_mode = 2

[node name="TextMargin" type="MarginContainer" parent="Control/UpperMiddleSlot/VBoxContainer/Timer/BoxMargin"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="TimerText" type="RichTextLabel" parent="Control/UpperMiddleSlot/VBoxContainer/Timer/BoxMargin/TextMargin"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/normal_font = ExtResource("2_xe7uj")
theme_override_font_sizes/normal_font_size = 64
text = "00:00"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="GoalText" type="RichTextLabel" parent="Control/UpperMiddleSlot/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_xe7uj")
theme_override_font_sizes/normal_font_size = 50
text = "Sample text"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false

[node name="BottomRightSlot" type="MarginContainer" parent="Control"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -50.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="CardManager" parent="Control/BottomRightSlot" instance=ExtResource("1_koc6h")]
unique_name_in_owner = true
scale = Vector2(0.6, 0.6)

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -178.0
offset_right = 446.0
offset_bottom = 42.0
grow_vertical = 0
scale = Vector2(0.8, 0.8)
theme_override_constants/margin_left = 100
theme_override_constants/margin_bottom = 100

[node name="RetryButton" type="TextureButton" parent="Control/MarginContainer"]
layout_mode = 2
texture_normal = ExtResource("3_khjl0")
texture_pressed = ExtResource("4_ut4tw")
texture_hover = ExtResource("5_65syq")

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="Control/MarginContainer/RetryButton" to="." method="_on_retry_button_pressed"]
